added another api for retrieving all links on a page
